tests/src/frontend/syntax/invalid/pattern_multi_binds_non_overlapping1.sk
base class Foo {
  children =
  | Bar(Int, Int)
  | Baz(Int, Int, Int)
}

fun shouldFail(): String {
  b: Foo = Bar(1, 2);

  b match {
  | Bar(x, y)
  | Baz(x, y, z) ->
    "Fail\n"
  }
}
